# vite-actix

./: .gitignore  Cargo.toml  README.MD  README.md
examples/: advanced.rs  basic.rs
examples/wwwroot/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples/wwwroot/src/assets/components/: Navigation.tsx
src/: lib.rs  proxy_vite_options.rs  vite_app_factory.rs
