[package]
name = "vite-actix"
version = "0.1.2"
edition = "2021"
description = "A library for integrating vite dev server to actix web server."
repository = "https://github.com/Drew-Chase/vite-actix"
license-file = "LICENSE"
readme = "README.MD"
autoexamples = true

[dependencies]
actix-web = { version = "4.9.0", optional = false }
futures-util = { version = "0.3.31", optional = false }
log = { version = "0.4.25", optional = false }
awc = {version =  "3.5.1", optional = false }
anyhow = { version = "1.0.95", optional = false }

