[package]
name = "vite-actix"
version = "0.2.0"
edition = "2024"
description = "A library for integrating vite dev server to actix web server."
repository = "https://github.com/Drew-Chase/vite-actix"
license-file = "LICENSE"
readme = "README.MD"
autoexamples = true

[dependencies]
actix-web = { version = ">=4", optional = false }
futures-util = { version = ">=0.3", optional = false }
log = { version = ">=0.4", optional = false }
awc = {version =  ">=3.5.1", optional = false }
anyhow = { version = ">=1.0.5", optional = false }

[dev-dependencies]
env_logger = "0.11.8"